# regression_agent

./: .gitignore  README.md  pyproject.toml
examples/: main_app.py
examples/data/: saas_timeseries_data.csv  saas_timeseries_data_binarystrclass.csv  saas_timeseries_data_highcorr.csv  saas_timeseries_data_sixlabel.csv  saas_timeseries_data_tenlabel.csv  static_saas_data.csv  static_saas_reg_data.csv  ts_saas_reg_data.csv
examples/orchestrators/: step1_data_upload.py  step2_validation.py  step3_preprocessing.py  step4_splitting.py  step5_model_training.py  step6_model_selection.py  step7_model_inference.py
examples/views/: streamlit_views.py
regression_agent/agents/: categorical_feature_agent.py  code_generator_agent.py  data_splitting_agent.py  data_type_suggestion_agent.py  leakage_detection_agent.py  mapping_agent.py  model_selection_agent.py  model_training_agent.py
regression_agent/config/: model_config.py  prompt_config.json
regression_agent/utils/: model_manager.py
