[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfn-regression-agent"
version = "0.1.0"
authors = [
  { name="StepFN AI" },
]
description = "An AI-powered feature selection agent for automated data analysis and feature selection"
readme = "README.md"
requires-python = ">=3.9, <3.12"

dependencies = [
    "sfn_blueprint==0.5.2",
    "sfn-llm-client==0.1.0",
    "lightgbm>=4.1.0",
    "catboost>=1.2.2",
]

[project.urls]
Homepage = "git@github.com:stepfnAI/regression_agent.git"

[tool.hatch.build.targets.wheel]
packages = ["regression_agent"]